log/build_2021-12-12_20-12-55/main/stderr.log
  File "/home/ubuntu/ws/Libero/install/main/lib/python3.8/site-packages/python_programs/main.py", line 1
    !/usr/bin/env python3
    ^
SyntaxError: invalid syntax

